--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.movieappcompose'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.movieappcompose"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -47,7 +47,9 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.compose.material:material-icons-extended:1.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
