--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,10 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
