--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.navigation:navigation-testing:2.5.3'
     implementation 'androidx.room:room-ktx:2.4.3'
     implementation 'androidx.room:room-runtime:2.4.3'
     implementation 'io.coil-kt:coil-compose:2.2.2'
